--- a/src/VeiculoProtegido.Domain/VeiculoProtegido.Domain.csproj
+++ b/src/VeiculoProtegido.Domain/VeiculoProtegido.Domain.csproj
@@ -39,14 +39,16 @@
   <ItemGroup>
     <Compile Include="Entities\Empresa.cs" />
     <Compile Include="Entities\Endereco.cs" />
+    <Compile Include="Interfaces\Repository\IEmpresaRepository.cs" />
+    <Compile Include="Interfaces\Repository\IEnderecoRepository.cs" />
+    <Compile Include="Interfaces\Repository\IRepository.cs" />
+    <Compile Include="Interfaces\Service\IEmpresaService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\EmpresaService.cs" />
+    <Compile Include="Specifications\Empresas\EmpresaMustHaveEmailUniqueSpecification.cs" />
+    <Compile Include="Validations\Empresas\EmpresaAbleToRegisterValidation.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
-    <Folder Include="Specifications\" />
-    <Folder Include="Validations\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
