--- a/src/VeiculoProtegido.Domain/VeiculoProtegido.Domain.csproj
+++ b/src/VeiculoProtegido.Domain/VeiculoProtegido.Domain.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EmpresaService.cs" />
     <Compile Include="Specifications\Empresas\EmpresaMustHaveEmailUniqueSpecification.cs" />
+    <Compile Include="Validations\Documentos\CPFValidation.cs" />
     <Compile Include="Validations\Empresas\EmpresaAbleToRegisterValidation.cs" />
   </ItemGroup>
   <ItemGroup />
