[add]Layout padrão da aplicação

--- a/src/VeiculoProtegido.UI.Mvc/VeiculoProtegido.UI.Mvc.csproj
+++ b/src/VeiculoProtegido.UI.Mvc/VeiculoProtegido.UI.Mvc.csproj
@@ -186,10 +186,73 @@
     <Content Include="css\application.css" />
     <Content Include="css\application.min.css" />
     <Content Include="css\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="demo\ajax\messages.html" />
+    <Content Include="demo\ajax\notifications.html" />
+    <Content Include="demo\ajax\notifications.php" />
+    <Content Include="demo\ajax\progress.html" />
+    <Content Include="demo\ajax\widgets\autoload.php" />
+    <Content Include="demo\ajax\widgets\default.php" />
+    <Content Include="demo\ajax\widgets\news.php" />
+    <Content Include="demo\ajax\widgets\shares.php" />
+    <Content Include="demo\img\logo\invoice-logo.png" />
+    <Content Include="demo\img\people\a1.jpg" />
+    <Content Include="demo\img\people\a2.jpg" />
+    <Content Include="demo\img\people\a3.jpg" />
+    <Content Include="demo\img\people\a4.jpg" />
+    <Content Include="demo\img\people\a5.jpg" />
+    <Content Include="demo\img\people\a6.jpg" />
+    <Content Include="demo\img\pictures\1.jpg" />
+    <Content Include="demo\img\pictures\10.jpg" />
+    <Content Include="demo\img\pictures\11.jpg" />
+    <Content Include="demo\img\pictures\13.jpg" />
+    <Content Include="demo\img\pictures\14.jpg" />
+    <Content Include="demo\img\pictures\15.jpg" />
+    <Content Include="demo\img\pictures\16.jpg" />
+    <Content Include="demo\img\pictures\17.jpg" />
+    <Content Include="demo\img\pictures\18.jpg" />
+    <Content Include="demo\img\pictures\19.jpg" />
+    <Content Include="demo\img\pictures\2.jpg" />
+    <Content Include="demo\img\pictures\3.jpg" />
+    <Content Include="demo\img\pictures\4.jpg" />
+    <Content Include="demo\img\pictures\5.jpg" />
+    <Content Include="demo\img\pictures\6.jpg" />
+    <Content Include="demo\img\pictures\8.jpg" />
+    <Content Include="demo\img\pictures\9.jpg" />
+    <Content Include="demo\js\_fake-world-data.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="img\avatar.png" />
+    <Content Include="img\search.png" />
+    <Content Include="img\sing-preview.png" />
+    <Content Include="img\sing-screenshot.png" />
+    <Content Include="js\app.js" />
+    <Content Include="js\bootstrap-fix\button.js" />
+    <Content Include="js\bootstrap-fix\collapse.js" />
+    <Content Include="js\calendar.js" />
+    <Content Include="js\charts.js" />
+    <Content Include="js\compose.js" />
+    <Content Include="js\form-elements.js" />
+    <Content Include="js\form-validation.js" />
+    <Content Include="js\form-wizard.js" />
+    <Content Include="js\gallery.js" />
+    <Content Include="js\gmap.js" />
+    <Content Include="js\grid.js" />
+    <Content Include="js\inbox.js" />
+    <Content Include="js\index.js" />
+    <Content Include="js\invoice.js" />
+    <Content Include="js\maps-vector.js" />
+    <Content Include="js\settings.js" />
+    <Content Include="js\tables-basic.js" />
+    <Content Include="js\tables-dynamic.js" />
+    <Content Include="js\timeline.js" />
+    <Content Include="js\ui-buttons.js" />
+    <Content Include="js\ui-components.js" />
+    <Content Include="js\ui-list-groups.js" />
+    <Content Include="js\ui-notifications.js" />
+    <Content Include="js\ui-tabs-accordion.js" />
+    <Content Include="js\widgets.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="css\fonts\glyphicons-halflings-regular.eot" />
@@ -210,6 +273,10 @@
     <Content Include="css\fonts\google\roboto-light.woff" />
     <Content Include="css\fonts\google\roboto-medium.woff" />
     <Content Include="css\fonts\google\roboto-regular.woff" />
+    <Content Include="demo\json\emails.json" />
+    <Content Include="demo\json\folders.json" />
+    <Content Include="demo\json\pageable-territories.json" />
+    <Content Include="js\bootstrap-fix\README.md" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
