--- a/src/VeiculoProtegido.UI.Mvc/VeiculoProtegido.UI.Mvc.csproj
+++ b/src/VeiculoProtegido.UI.Mvc/VeiculoProtegido.UI.Mvc.csproj
@@ -233,6 +233,7 @@
     <Content Include="js\bootstrap-fix\button.js" />
     <Content Include="js\bootstrap-fix\collapse.js" />
     <Content Include="js\calendar.js" />
+    <Content Include="js\carro.js" />
     <Content Include="js\charts.js" />
     <Content Include="js\compose.js" />
     <Content Include="js\form-elements.js" />
@@ -248,7 +249,6 @@
     <Content Include="js\settings.js" />
     <Content Include="js\tables-basic.js" />
     <Content Include="js\tables-dynamic.js" />
-    <Content Include="js\teste.js" />
     <Content Include="js\timeline.js" />
     <Content Include="js\ui-buttons.js" />
     <Content Include="js\ui-components.js" />
@@ -5652,7 +5652,6 @@
     <Content Include="vendor\widgster\README.md" />
     <Content Include="Views\Home\FormElements.cshtml" />
     <Content Include="Views\Fipe\Carro.cshtml" />
-    <Content Include="Views\Fipe\Teste.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
