[add] Busca do ano/combustivel pela marca e modelo do veiculo

--- a/src/VeiculoProtegido.Domain/VeiculoProtegido.Domain.csproj
+++ b/src/VeiculoProtegido.Domain/VeiculoProtegido.Domain.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Marca.cs" />
+    <Compile Include="Entities\MarcaModeloAno.cs" />
     <Compile Include="Entities\Modelo.cs" />
     <Compile Include="Entities\PrecoFIPE.cs" />
     <Compile Include="Entities\Veiculo.cs" />
