[add] Classes de Tabela de Precos e Faixas de Tabela de Preco

--- a/src/VeiculoProtegido.Infra.Data/VeiculoProtegido.Infra.Data.csproj
+++ b/src/VeiculoProtegido.Infra.Data/VeiculoProtegido.Infra.Data.csproj
@@ -58,6 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\VeiculoProtegidoContext.cs" />
+    <Compile Include="EntityConfig\FaixaTabelaPrecoConfig.cs" />
+    <Compile Include="EntityConfig\TabelaPrecoConfig.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -73,9 +75,7 @@
       <Name>VeiculoProtegido.Domain</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="EntityConfig\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
