--- a/src/VeiculoProtegido.Infra.CrossCutting.Global/VeiculoProtegido.Infra.CrossCutting.Global.csproj
+++ b/src/VeiculoProtegido.Infra.CrossCutting.Global/VeiculoProtegido.Infra.CrossCutting.Global.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{69FFAA45-FE3A-481F-A83C-471443C71B3F}</ProjectGuid>
+    <ProjectGuid>{6AC6054C-3338-437D-BEE9-7E85BF62BBE3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VeiculoProtegido.Domain</RootNamespace>
-    <AssemblyName>VeiculoProtegido.Domain</AssemblyName>
+    <RootNamespace>VeiculoProtegido.Infra.CrossCutting.Global</RootNamespace>
+    <AssemblyName>VeiculoProtegido.Infra.CrossCutting.Global</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,32 +30,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DomainValidation, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\DomainValidation.1.0.0\lib\net451\DomainValidation.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\FaixaTabelaPreco.cs" />
-    <Compile Include="Entities\Marca.cs" />
-    <Compile Include="Entities\MarcaModeloAno.cs" />
-    <Compile Include="Entities\Modelo.cs" />
-    <Compile Include="Entities\PrecoFIPE.cs" />
-    <Compile Include="Entities\TabelaPreco.cs" />
-    <Compile Include="Entities\Veiculo.cs" />
-    <Compile Include="Interfaces\Repository\IRepository.cs" />
+    <Compile Include="Numerators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Validations\Documentos\CPFValidation.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Interfaces\Service\" />
-    <Folder Include="Services\" />
-    <Folder Include="Specifications\Empresas\" />
-    <Folder Include="Validations\Empresas\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
