--- a/src/VeiculoProtegido.UI.Mvc/Web.config
+++ b/src/VeiculoProtegido.UI.Mvc/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-VeiculoProtegido.UI.Mvc-20160902095305.mdf;Initial Catalog=aspnet-VeiculoProtegido.UI.Mvc-20160902095305;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="VeiculoProtegidoConnection" connectionString="Data Source=MICRO08;Initial Catalog=VeiculoProtegidoDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
