--- a/src/VeiculoProtegido.Infra.Data/VeiculoProtegido.Infra.Data.csproj
+++ b/src/VeiculoProtegido.Infra.Data/VeiculoProtegido.Infra.Data.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Repository.cs" />
+    <Compile Include="Repository\TabelaPrecoRepository.cs" />
     <Compile Include="UoW\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
