--- a/src/VeiculoProtegido.Infra.Data/VeiculoProtegido.Infra.Data.csproj
+++ b/src/VeiculoProtegido.Infra.Data/VeiculoProtegido.Infra.Data.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\FaixaTabelaPrecoRepository.cs" />
     <Compile Include="Repository\Repository.cs" />
     <Compile Include="Repository\TabelaPrecoRepository.cs" />
     <Compile Include="UoW\UnitOfWork.cs" />
