--- a/src/VeiculoProtegido.Application/VeiculoProtegido.Application.csproj
+++ b/src/VeiculoProtegido.Application/VeiculoProtegido.Application.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Interfaces\IMarcaAppService.cs" />
     <Compile Include="Interfaces\ITabelaPrecoAppService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TabelaPrecoAppService.cs" />
     <Compile Include="ViewModels\FaixaTabelaPrecoViewModel.cs" />
     <Compile Include="ViewModels\MarcaViewModel.cs" />
     <Compile Include="ViewModels\ModeloViewModel.cs" />
