--- a/src/VeiculoProtegido.UI.Mvc/VeiculoProtegido.UI.Mvc.csproj
+++ b/src/VeiculoProtegido.UI.Mvc/VeiculoProtegido.UI.Mvc.csproj
@@ -5770,6 +5770,9 @@
   <ItemGroup>
     <Content Include="Views\TabelasPreco\Index.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\TabelasPreco\_FaixaTabelaPrecoAdd.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
