--- a/src/VeiculoProtegido.Application/VeiculoProtegido.Application.csproj
+++ b/src/VeiculoProtegido.Application/VeiculoProtegido.Application.csproj
@@ -63,6 +63,7 @@
     <Compile Include="ViewModels\PrecoFIPEViewModel.cs" />
     <Compile Include="ViewModels\TabelaPrecoFaixaTabelaPrecoViewModel.cs" />
     <Compile Include="ViewModels\TabelaPrecoViewModel.cs" />
+    <Compile Include="ViewModels\TipoFIPE.cs" />
     <Compile Include="ViewModels\VeiculoViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
