[fix] View de Create merclada a partial view de TipoFIPE.

--- a/src/VeiculoProtegido.Application/VeiculoProtegido.Application.csproj
+++ b/src/VeiculoProtegido.Application/VeiculoProtegido.Application.csproj
@@ -63,7 +63,7 @@
     <Compile Include="ViewModels\PrecoFIPEViewModel.cs" />
     <Compile Include="ViewModels\TabelaPrecoFaixaTabelaPrecoViewModel.cs" />
     <Compile Include="ViewModels\TabelaPrecoViewModel.cs" />
-    <Compile Include="ViewModels\TipoFIPE.cs" />
+    <Compile Include="ViewModels\TipoFIPEViewModel.cs" />
     <Compile Include="ViewModels\VeiculoViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
